Added Build Status Icon to README.rdoc

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
-postfix
+= puppet-postfix module
+
+{<img src='https://codex.cegeka.be/jenkins/job/puppet-postfix/badge/icon' />}[https://codex.cegeka.be/jenkins/job/puppet-postfix/]
 
 This is the postfix module.
